# p4net-perf-study

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py  aggregate.py  divergence.py  plots.py  tables.py
data/summaries/: divergence_report.csv  divergence_summary.json  experiment_log.csv  experiment_log_rep2.csv  rq1_summary_rep1.csv  rq1_summary_rep2.csv  rq2_summary.csv  rq2_summary_rep2.csv  rq3_summary.csv  rq3_summary_rep2.csv  rq4_summary.csv  rq4_summary_rep2.csv
p4/: l2_forward.p4  l3_lpm.p4  l3_lpm_acl.p4  l3_lpm_int.p4  l3_lpm_int_chain.p4
p4/include/: instrument.p4h
runner/: __init__.py  host_setup.py  runner.py  system_info.py
runner/configs/: pilot.yaml  rq1_full.yaml  rq1_int_backfill.yaml  rq2_full.yaml  rq3_full.yaml  rq4_full.yaml  saturation_sweep.yaml
tests/: conftest.py  test_aggregate.py  test_background_traffic.py  test_control_plane_ops.py  test_divergence.py  test_int_collector.py  test_l3_lpm_int_smoke.py  test_latency_probe.py  test_linear_n.py  test_plots.py  test_resource_monitor.py  test_runner_warmup.py  test_smoke.py  test_system_info.py  test_tables.py
topologies/: __init__.py  linear_n.py  single_switch.py
workloads/: __init__.py  background_traffic.py  control_plane_ops.py  int_collector.py  latency_probe.py  resource_monitor.py  saturation_sweep.py
