[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p4net-perf-study"
version = "0.1.0.dev0"
description = "Measurement harness for characterizing BMv2 P4 emulation performance."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Henghua Zhang", email = "1652709417@qq.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Networking",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "p4net==1.7.0",
  "psutil>=5.9",
  "numpy",
  "pandas",
  "pyyaml",
  "scapy>=2.5",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/zhh2001/p4net-perf-study"
Repository = "https://github.com/zhh2001/p4net-perf-study"

[tool.hatch.build.targets.wheel]
packages = ["runner", "topologies", "workloads", "analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Plot labels intentionally use Unicode '×' / '−' for paper-quality
# rendering; ruff's ambiguous-character lints would force ASCII fallbacks.
"analysis/plots.py" = ["RUF001", "RUF002", "RUF003"]
"analysis/tables.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_plots.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_tables.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
  "integration: requires root and Linux network namespaces",
  "requires_p4c: requires the 'p4c' compiler binary on PATH",
  "requires_bmv2: requires the simple_switch_grpc binary on PATH",
]
